Fixed spacing issue in the home page

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ div.container {
 }
 
 div.user {
-  margin:50px 0;
+  margin:0px 0  50px 0;
+  clear:both;
 }
 
 div.progressbarouter {
